# algebra

./: CMakeLists.txt  README.md  examples  examples.txt
apps/: CMakeLists.txt
apps/decomposer/: CMakeLists.txt  main.cpp
include/algorithm/: jordanDecomposition.hpp  jordan_decomposition.hpp  matrix_operations.hpp
include/datastructure/: epsFloat.hpp  fractionalize.hpp  fractionalize.ipp  fractionalize.tpp  integer.hpp  matrix.hpp  matrix.ipp  matrix.tpp  modp.hpp  polynomial.hpp  polynomial.ipp  polynomial.tpp  root.hpp
include/util/: helper.hpp
tests/: CMakeLists.txt  testJordanDecomp.cpp  testMatOps.cpp  testMatrix.cpp  testPolynomial.cpp
